--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -18,7 +18,7 @@
     "img_dict = img_dicts[0]\n",
     "key_dict = key_dicts[0]\n",
     "\n",
-    "n_trials = 16*16 # number of trials within a block should be 256\n",
+    "`n_trials = 16*16 # number of trials within a block should be 256\n",
     "dfStims = pd.DataFrame()\n",
     "block_ids = [1, 1, 2, 2, 2, 1, 2]#1 is random #2 is sequence\n",
     "chunks = [[2,3,4,2],[4,5,3,5],[3,2,4,3],[5,4,2,4]]\n",
